--- a/index.html
+++ b/index.html
@@ -5,11 +5,93 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Year New Mes</title>
+    <title>New Year New Me</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- google fonts  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <header>
+        <section>
+            <div></div>
+            <div class="banner">
+                <div class="banner-text">
+                    <div class="banner-title">
+                        <h2>ALL THINGS ARE</h2>
+                        <h2>POSSIBLE IF YOU</h2>
+                        <h2> BELIVE</h2>
+                    </div>
+                    <p> There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised words</p>
+                    <button class="banner-button"><a href="#">Contuct us</a></button>
+                </div>
 
+            </div>
+
+        </section>
+    </header>
+    <main>
+        <section class="main-part">
+            <div class="main-title">
+                <h3>My failures of</h3>
+                <h3> previous year</h3>
+            </div>
+            <p>My failures of previous year
+                Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
+                Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.
+            </p>
+            <ul>
+                <li>Contrary to popular belief, is not simply.</li>
+                <li> Contrary to popular belief.</li>
+                <li> Contrary to popular , is not simply.</li>
+                <li> Contrary to popular belief, is not simply.</li>
+                <li>Contrary to popular simply.</li>
+            </ul>
+        </section>
+        <section class="class-container">
+            <h3 class="plan-title">My Plans</h3>
+            <div class="plans">
+                <div>
+                    <img src="images/icons/ecom.png" alt="">
+                    <p>Ecommarce</p>
+                    <p>I want to develop</p>
+                </div>
+                <div>
+                    <img src="images/icons/web.png" alt="">
+                    <p>Web Development</p>
+                    <p>I want to start</p>
+                </div>
+                <div>
+                    <img src="images/icons/smoke.png" alt="">
+                    <p>Smoking Habit</p>
+                    <p>I want end</p>
+                </div>
+                <div>
+                    <img src="images/icons/js.png" alt="">
+                    <p>Javascript</p>
+                    <p>I want to learn</p>
+                </div>
+            </div>
+        </section>
+        <section class="mindset">
+            <h3 class="plan-title">Awlays keep a positive </h3>
+            <h3 class="plan-title">mindset</h3>
+            <button class="banner-button"><a href="#">Contuct us</a></button>
+        </section>
+    </main>
+    <footer>
+        <div>
+            <h2>FUTURE</h2>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+                in some form, by injected humour, or randomised words</p>
+            <p>Email : info@gmail.com</p>
+            <p>Phone : 01500 00 00 00</p>
+        </div>
+        <div></div>
+    </footer>
 </body>
 
 </html>
