--- a/index.html
+++ b/index.html
@@ -85,12 +85,25 @@
     <footer>
         <div>
             <h2>FUTURE</h2>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
-                in some form, by injected humour, or randomised words</p>
-            <p>Email : info@gmail.com</p>
-            <p>Phone : 01500 00 00 00</p>
+            <div class="future">
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration
+                    in some form, by injected humour, or randomised words</p>
+                <p>Email : info@gmail.com</p>
+                <p>Phone : 01500 00 00 00</p>
+                <div>
+                    <img class="socials" src="images/icons/fb.png" alt="">
+                    <img class="socials" src="images/icons/twitter.png" alt="">
+                    <img class="socials" src="images/icons/youtube.png" alt="">
+                </div>
+            </div>
         </div>
-        <div></div>
+        <div>
+            <h2>Subscribe</h2>
+            <input type="email" name="" id="" placeholder="Enter Your Email">
+            <button class="banner-button"><a href="#">Contuct us</a></button>
+
+        </div>
     </footer>
 </body>
 
